Added 'onhold' option for strips, for strips which update very infrequently or are on hold.  Will only display the strip if it changes.

--- a/dailystrips-main.html
+++ b/dailystrips-main.html
@@ -26,6 +26,8 @@
 		<td>
             {% if strip.error -%}
                 <b>[{{ strip.error }}]</b>
+            {% elif strip.onhold and strip.unchanged_since %}
+                <i>(Unchanged since <a href="{{ strip.unchanged_since_link() }}">{{ strip.unchanged_since_human() }}</a>)</i>
             {% else -%}
                 {% for pattern in strip.patterns -%}
                     {% if not loop.first %}{{ pattern.title }}:{% endif %}
